--- a/MyPhoneBook/MyPhoneBook.API.csproj
+++ b/MyPhoneBook/MyPhoneBook.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\QueryController.cs" />
     <Compile Remove="ItemNotFoundExceptionFilterAttribute.cs" />
   </ItemGroup>
 
